# ma_mapper

./: .gitignore  .mailmap  README.md  ma_mapperbigwig_extract.log.lzo  ma_mapperbigwig_extract.log.lzot  pyproject.toml  setup.py
.history/: README_20250721203316.md
.lh/: README.md.json
docs/: gettingstarted.md  package_docs.md
legacy/: myfunctions.py
ma_mapper/: __init__.py  custom_cmap.py  extract_bam.py  extract_bed.py  extract_bigwig.py  extract_maf.py  extract_vcf.py  fetch_data.py  fetch_sequence.py  mafft_align.py  mafio_patch.py  mapper.py  plot.py  plot_assist.py  plots.py  sequence_alignment.py  steamline.py  utility.py
ma_mapper.egg-info/: PKG-INFO  SOURCES.txt
mi_sourcecode/: functionsMAFFT.py
mypackage/: extract_bigwig.py  mapper.py  module.py
script/: Interactive - mafio_patch.py.ipynb  bookmarkscript.py  config_main.py  mafio_patch.py
test/: 01coord_prep.py  02fetch_and_align.py  03parse_align_and_filter.py  04maf_mapping.py  05vcf_mapping.py  06bam_mapping  06bam_mapping.py  07bed_mapping.py  08maf_clustering.py  09attach_unalign.py  09maf_attach_unalign.py  10align_multiple_family.py  11bigwig_mapping.py  12maf_check.py  13maf_extract_with_age.py  14extract_both_maf_and_age.py  15coverage_check.py  17redo-maf-age.py  18redo-maf-age2.py  19maf-age-manipulation.py  20old_maf_results_restoration.py  21bed_redo.py  22functional_grouping.py  23coord_fetch_align_pipeline.py  24maf-age_common_count.py  25chisquare.py  26age_calc_twopass.py  27bxpython_test.py  28another_maf_counting_investigation.py  29gene.py  30plot_test.py  47plots_dev.py  (+12 more)
(+220 files in other folders)
