#pyproject v.0.0.1
[tool.poetry]
name = "ma-mapper"
version = "0.8.7.1"
description = "Multiple Alignment Mapper"
authors = ["pkncsk <pkncsk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
biopython = "*"
compress-pickle = "*"
cyvcf2 = "*"
h5py = "*"
logomaker = "*"
matplotlib = "*"
numpy ="*"
pandas = "*"
pybedtools = "*"
pybigwig = "*"
pysam = "*"
scipy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
